bug fix. -- CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 cmake_minimum_required (VERSION 2.6)
 project (PetGL)
-add_executable (PetGL PetGL.cpp)
+
+set (PetGL_VERSION_MAJOR 0)
+set (PetGL_VERSION_MINOR 1)
 
 configure_file (
+	       "${PROJECT_SOURCE_DIR}/PetGLConfig.h.in"
+	       "${PROJECT_BINARY_DIR}/PetGLConfig.h"
+)
+
+include_directories ("${PROJECt_BINARY_DIR}")
+
+#add the executable
+add_executable (PetGL PetGL.cpp)
