First successful optimization

--- a/elastic/CMakeLists.txt
+++ b/elastic/CMakeLists.txt
@@ -1,20 +1,12 @@
 cmake_minimum_required (VERSION 2.8)
 project (Elastic)
 
-
-#VERSION
-
-#set (PetGL_VERSION_MAJOR 0)
-#set (PetGL_VERSION_MINOR 1)
-
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 include (common)
 
 
 #find Qt4
 
-#set (QT_USE_QTOPENGL TRUE)
-#set (QT_USE_QTXML TRUE)
 find_package (Qt4 REQUIRED QtCore QtGui QtXml QtOpenGL)
 
 include (${QT_USE_FILE})
@@ -29,19 +21,19 @@ set (Elastic_SOURCES elastic.cpp)
 #set (PetMesh_SOURCES PetMesh.cpp PetCurve.cpp)
 #set (PGL_SOURCES PetGL.cpp Viewer.cpp)
 set (Elastic_HEADERS elastic.h)
-#set (PetGL_FORMS PetGL.ui)
+set (Elastic_FORMS elasticpanel.ui)
 
 QT4_WRAP_CPP (Elastic_HEADERS_MOC ${Elastic_HEADERS})
-#QT4_WRAP_UI (PetGL_FORMS_HEADERS ${PetGL_FORMS})
+QT4_WRAP_UI (Elastic_FORMS_HEADERS ${Elastic_FORMS})
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
 #add the executable
-add_library (elastic SHARED ${Elastic_SOURCES} ${Elastic_HEADERS_MOC})
+add_library (elastic SHARED ${Elastic_SOURCES} ${Elastic_HEADERS_MOC} ${Elastic_FORMS_HEADERS})
 target_link_libraries (elastic
 	${QT_LIBRARIES}
 	${PetMesh}
 	${PGL})
 set (EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
-set (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/plugins")
+set (LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
